<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2011-present Sonatype, Inc. All rights reserved.
    Includes the third-party code listed at http://links.sonatype.com/products/clm/attributions.
    "Sonatype" is a trademark of Sonatype, Inc.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.sonatype.insight.brain</groupId>
    <artifactId>insight-brain</artifactId>
    <version>1.183.0-SNAPSHOT</version>
  </parent>

  <artifactId>nexus-iq-server</artifactId>
  <packaging>pom</packaging>
  <name>Sonatype Nexus IQ Server distribution bundle</name>

  <properties>
    <clm.server.jar>${project.artifactId}-${project.version}.jar</clm.server.jar>
    <clm.server.demo.command>java --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/sun.security.rsa=ALL-UNNAMED --add-opens=java.base/sun.security.x509=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED -jar ${clm.server.jar} server config.yml 2> stderr.log</clm.server.demo.command>
    <jdk.distribution>temurin</jdk.distribution>
    <jdk.version>17.0.2</jdk.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>insight-brain-service</artifactId>
      <version>${project.version}</version>
      <classifier>server</classifier>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>nexus-iq-cli</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
              <excludeTransitive>true</excludeTransitive>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jreleaser</groupId>
        <artifactId>jreleaser-maven-plugin</artifactId>
        <version>1.14.0</version>
        <inherited>false</inherited>
        <configuration>
          <configFile>jreleaser.yml</configFile>
        </configuration>
      </plugin>
      <!-- This will be deprecated in the future -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <id>create-distro</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>src/main/assembly/server-bundle.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>verify-bytecode-version</id>
            <phase>test</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <enforceBytecodeVersion>
                  <maxJdkVersion>${maven.compiler.target}</maxJdkVersion>
                  <includes>
                    <!-- the server is an uber JAR so we can exclude all its dependencies -->
                    <include>${project.groupId}:insight-brain-service</include>
                  </includes>
                </enforceBytecodeVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdks</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jreleaser</groupId>
            <artifactId>jdks-maven-plugin</artifactId>
            <version>1.10.0</version>
            <executions>
              <execution>
                <phase>process-resources</phase>
                <id>setup-disco</id>
                <goals>
                  <goal>setup-disco</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <pkgs>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_linux_x86_64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>linux-x86_64</platform>
                  <version>${jdk.version}</version>
                  <archiveType>tar.gz</archiveType>
                </pkg>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_linux_musl_x86_64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>linux-x86_64</platform>
                  <version>${jdk.version}</version>
                  <libcType>musl</libcType>
                  <archiveType>tar.gz</archiveType>
                </pkg>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_linux_aarch64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>linux-aarch64</platform>
                  <version>${jdk.version}</version>
                  <archiveType>tar.gz</archiveType>
                </pkg>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_mac_x86_64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>osx-x86_64</platform>
                  <version>${jdk.version}</version>
                  <archiveType>tar.gz</archiveType>
                </pkg>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_mac_aarch64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>osx-aarch64</platform>
                  <version>${jdk.version}</version>
                  <archiveType>tar.gz</archiveType>
                </pkg>
                <pkg>
                  <name>${jdk.distribution}_${jdk.version}_windows_x86_64</name>
                  <distribution>${jdk.distribution}</distribution>
                  <platform>windows-x86_64</platform>
                  <version>${jdk.version}</version>
                </pkg>
              </pkgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
</project>
